REOPENED131636
Function.bind itself is too slow
https://bugs.webkit.org/show_bug.cgi?id=131636
Summary Function.bind itself is too slow
Oliver Hunt
Reported 2014-04-14 14:59:09 PDT
Function.bind itself is too slow
Attachments
Patch (15.67 KB, patch)
2014-04-14 15:01 PDT, Oliver Hunt
no flags
Patch (14.76 KB, patch)
2014-04-14 15:01 PDT, Oliver Hunt
ggaren: review+
Oliver Hunt
Comment 1 2014-04-14 15:01:14 PDT
Oliver Hunt
Comment 2 2014-04-14 15:01:46 PDT
Geoffrey Garen
Comment 3 2014-04-14 15:03:24 PDT
Comment on attachment 229308 [details] Patch r=me
Oliver Hunt
Comment 4 2014-04-14 15:06:11 PDT
Alexey Proskuryakov
Comment 5 2014-04-14 23:10:57 PDT
This change broke multiple tests, and EWS saw that. Please do click on yellow bubbles before landing, even if they didn't turn red yet. Broken tests: js/dom/function-bind.html js/regress/function-bind-create.html fast/canvas/webgl/typed-arrays-in-workers.html webgl/1.0.2/conformance/typedarrays/typed-arrays-in-workers.html Will roll out.
WebKit Commit Bot
Comment 6 2014-04-14 23:11:44 PDT
Re-opened since this is blocked by bug 131666
Geoffrey Garen
Comment 7 2014-04-15 00:14:11 PDT
perf.webkit.org measured a 1% DYEB regression from this patch.
Note You need to log in before you can comment on or make changes to this bug.